# palace-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  mypy.yml  publish-pypi.yml  test.yml
samples/: sample_library_import.csv
src/_vendor/palace/manager/service/logging/: configuration.py
src/palace/tools/: __init__.py
src/palace/tools/cli/: download_feed.py  fetch_lcp.py  generate_demarque_keys.py  import_libraries_from_csv.py  overdrive_feed_analyzer.py  palace_terminal.py  patron_bookshelf.py  stress_test_opds2.py  summarize_rwpm_audio_manifest.py  validate_feed.py  validate_manifests.py
src/palace/tools/feeds/: odl.py  opds.py  opds1.py  overdrive.py  retry.py
src/palace/tools/models/api/: authentication_document.py  opds2.py  patron_profile.py  readium_lcp_license_v1.py
src/palace/tools/models/internal/: bookshelf.py
src/palace/tools/models/internal/rwpm_audio/: audio_segment.py  audiobook.py
src/palace/tools/roles/: patron.py
src/palace/tools/services/: registry.py
src/palace/tools/utils/: datetime.py  logging.py  typer.py
src/palace/tools/utils/http/: async_client.py  auth_token.py  streaming.py
src/palace/tools/validation/: opds.py
src/palace_tools/: __init__.py  constants.py  models.py
src/palace_tools/cli/: create_patron_auth_service.py  download_feed.py  generate_demarque_keys.py  import_libraries_from_csv.py  overdrive_feed_analyzer.py  palace_terminal.py  patron_bookshelf.py  stress_test_opds2.py  validate_feed.py
src/palace_tools/feeds/: opds.py  overdrive.py
src/palace_tools/models/api/: rwpm_audiobook.py
src/palace_tools/models/internal/: bookshelf.py
src/palace_tools/models/internal/rwpm_audio/: audio_segment.py  audiobook.py
src/palace_tools/roles/: patron.py
src/palace_tools/utils/http/: auth_token.py  streaming.py
src/palace_tools/validation/: opds.py
tests/: conftest.py
tests/fixtures/: file.py
tests/fixtures/files/: manifest.json
tests/palace_tools/: test_smoke.py
tests/palace_tools/cli/: test_generate_demarque_keys.py  test_palace_terminal.py  test_stress_test_opds2.py
tests/palace_tools/models/internal/rwpm_audio/: test_audio_segment.py  test_audiobook.py
tests/palace_tools/utils/http/: test_streaming.py
tests/palace_tools/validation/: test_opds.py
