[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
known_palace = ["palace"]
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,PALACE,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
files = ["src"]
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "vlc",
]

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
description = "Palace Tools"
homepage = "https://thepalaceproject.org"
license = "Apache-2.0"
name = "palace-tools"
packages = [{include = "palace_tools", from = "src"}]
readme = "README.md"
version = "0"

[tool.poetry.dependencies]
httpx = "^0.28.1"
mutagen = "^1.47.0"
palace-manager = {git = "https://github.com/ThePalaceProject/circulation.git", branch = "main"}
psycopg2-binary = "^2.9.11"
pydantic = "^2.11.7"
python = ">=3.12,<4"
python-vlc = "^3.0.20123"
pytz = "^2025.1"
rich = "^14.0.0"
textual = "^0.75.1"
typer = "^0.16.0"
typing_extensions = {version = "^4.9.0", python = "<3.11"}
xmltodict = "^0.13.0"

[tool.poetry.group.ci.dependencies]
pre-commit = "^4.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
tox = "^4.0.0"
types-pytz = "^2024.1.0.20240203"
types-requests = "^2.32.4.20250913"
types-xmltodict = "^0.13.0.3"

[tool.poetry.scripts]
audiobook-manifest-summary = "palace_tools.cli.summarize_rwpm_audio_manifest:main"
download-feed = "palace_tools.cli.download_feed:main"
fetch-lcp = "palace_tools.cli.fetch_lcp:main"
import-libraries-from-csv = "palace_tools.cli.import_libraries_from_csv:main"
overdrive_feed_analyzer = "palace_tools.cli.overdrive_feed_analyzer:main"
palace-terminal = "palace_tools.cli.palace_terminal:main"
patron-bookshelf = "palace_tools.cli.patron_bookshelf:main"
validate-audiobook-manifests = "palace_tools.cli.validate_manifests:main"
validate-feed = "palace_tools.cli.validate_feed:main"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
