[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]

[dependency-groups]
ci = [
    "pre-commit>=4.3.0,<5",
    "tox-uv>=1.35.1,<2",
    "tox>=4.52.1,<5",
]
dev = [
    "mypy>=1.8.0,<2",
    "pytest>=9.0.1,<10",
    "types-jwcrypto>=1.5.0.20251102,<2",
    "types-requests>=2.32.4.20250913,<3",
    "types-xmltodict>=1.0.1.20250920,<2",
]

[project]
authors = [{name = "The Palace Project", email = "info@thepalaceproject.org"}]
dependencies = [
    "ddsketch>=3.0.1,<4",
    "httpx>=0.28.1,<0.29",
    "jwcrypto>=1.5.6,<2",
    "mutagen>=1.47.0,<2",
    "palace-opds>=41.0.0,<43",
    "pydantic>=2.11.7,<3",
    "python-vlc>=3.0.20123,<4",
    "rich>=15.0.0,<16",
    "textual>=8.0.0,<9",
    "typer>=0.24.1,<0.25",
    "xmltodict>=1.0.2,<2",
]
description = "Palace Tools"
dynamic = ["version"]
license = "Apache-2.0"
name = "palace-tools"
readme = "README.md"
requires-python = ">=3.12,<4"

[project.scripts]
audiobook-manifest-summary = "palace_tools.cli.summarize_rwpm_audio_manifest:main"
download-feed = "palace_tools.cli.download_feed:main"
fetch-lcp = "palace_tools.cli.fetch_lcp:main"
generate-demarque-keys = "palace_tools.cli.generate_demarque_keys:main"
import-libraries-from-csv = "palace_tools.cli.import_libraries_from_csv:main"
overdrive_feed_analyzer = "palace_tools.cli.overdrive_feed_analyzer:main"
palace-terminal = "palace_tools.cli.palace_terminal:main"
patron-bookshelf = "palace_tools.cli.patron_bookshelf:main"
stress-test-opds2 = "palace_tools.cli.stress_test_opds2:main"
validate-audiobook-manifests = "palace_tools.cli.validate_manifests:main"
validate-feed = "palace_tools.cli.validate_feed:main"

[project.urls]
Homepage = "https://thepalaceproject.org"
Repository = "https://github.com/ThePalaceProject/palace-tools"

[tool.hatch.build.hooks.vcs]
version-file = "src/palace_tools/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/palace_tools"]

[tool.hatch.version]
source = "vcs"

[tool.isort]
known_palace = ["palace"]
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,PALACE,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "vlc",
]

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
